--- a/MainProject/package.json
+++ b/MainProject/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "firstproject",
+  "name": "mainproject",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
