--- a/mainproject/package.json
+++ b/mainproject/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.6",
+    "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
     "expo-splash-screen": "~0.15.1",
