--- a/mainproject/android/app/src/main/AndroidManifest.xml
+++ b/mainproject/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.firstproject">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.mainproject">
 
   <uses-permission android:name="android.permission.INTERNET"/>
   <!-- OPTIONAL PERMISSIONS, REMOVE WHATEVER YOU DO NOT NEED -->
@@ -7,6 +7,7 @@
   <!-- These require runtime permissions on M -->
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.CAMERA"/>
   <!-- END OPTIONAL PERMISSIONS -->
 
   <queries>
