--- a/mainproject/ios/mainproject.xcodeproj/xcshareddata/xcschemes/mainproject.xcscheme
+++ b/mainproject/ios/mainproject.xcodeproj/xcshareddata/xcschemes/mainproject.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "firstproject.app"
-               BlueprintName = "firstproject"
-               ReferencedContainer = "container:firstproject.xcodeproj">
+               BuildableName = "mainproject.app"
+               BlueprintName = "mainproject"
+               ReferencedContainer = "container:mainproject.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "firstprojectTests.xctest"
-               BlueprintName = "firstprojectTests"
-               ReferencedContainer = "container:firstproject.xcodeproj">
+               BuildableName = "mainprojectTests.xctest"
+               BlueprintName = "mainprojectTests"
+               ReferencedContainer = "container:mainproject.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "firstproject.app"
-            BlueprintName = "firstproject"
-            ReferencedContainer = "container:firstproject.xcodeproj">
+            BuildableName = "mainproject.app"
+            BlueprintName = "mainproject"
+            ReferencedContainer = "container:mainproject.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "firstproject.app"
-            BlueprintName = "firstproject"
-            ReferencedContainer = "container:firstproject.xcodeproj">
+            BuildableName = "mainproject.app"
+            BlueprintName = "mainproject"
+            ReferencedContainer = "container:mainproject.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
