--- a/mainproject/package.json
+++ b/mainproject/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@baronha/react-native-multiple-image-picker": "^0.4.10",
     "@react-native-async-storage/async-storage": "^1.17.6",
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
@@ -21,7 +23,8 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-axios": "^0.17.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "expo-media-library": "~14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
